Unit tests for classes: ingredient, recipeIngredient, recipe and foodStorage.